--- a/custom_components/watersmart/translations/en.json
+++ b/custom_components/watersmart/translations/en.json
@@ -27,6 +27,9 @@
             },
             "gallons_for_most_recent_hour": {
                 "name": "Most recent hour usage"
+            },
+            "gallons_today": {
+                "name": "Today's usage"
             }
         }
     },
